# agentic-chargeback-investigator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/git-commit/: SKILL.md
agent-registry/: pyproject.toml
agent-registry/src/agent_registry/: __init__.py  api.py  clock.py  config.py  lease_manager.py  logging.py  main.py  models.py  repository.py  service.py
agent-registry/tests/: test_api.py  test_clock.py  test_config.py  test_import.py  test_lease_manager.py  test_models.py  test_registry_logging.py  test_repository.py  test_service.py
contracts/: pyproject.toml
contracts/src/chargeback_contracts/: __init__.py  a2ui.py  agui.py  common.py  decisions.py  dispute.py  evidence.py  findings.py  mcp.py  policy.py  recommendation.py  records.py  skills.py
contracts/tests/: test_a2a_compatibility.py  test_a2ui.py  test_agui.py  test_common.py  test_decisions.py  test_dispute.py  test_evidence.py  test_findings.py  test_import.py  test_mcp.py  test_policy.py  test_public_surface.py  test_recommendation.py  test_records.py  test_skills.py
customer-history-agent/: pyproject.toml
customer-history-agent/src/customer_history_agent/: __init__.py
customer-history-agent/tests/: test_import.py
dispute-mcp-server/: Dockerfile  pyproject.toml
dispute-mcp-server/src/dispute_mcp_server/: __init__.py  config.py  logging.py  main.py  models.py  repository.py  seed_data.py
dispute-mcp-server/src/dispute_mcp_server/tools/: case_tools.py  customer_tools.py  merchant_tools.py  transaction_tools.py
dispute-mcp-server/tests/: test_case_tools.py  test_customer_tools.py  test_import.py  test_logging.py  test_merchant_tools.py  test_seed_data_consistency.py  test_server_startup.py  test_transaction_tools.py
docs/: COMMIT_LOG.md  use-case-tech-summary.md
docs/superpowers/plans/: 2026-07-21-repository-foundation.md  2026-07-21-shared-contract-layer.md  2026-07-22-dispute-mcp-server.md  2026-07-22-vertical-slice.md  2026-07-23-agent-registry.md
docs/superpowers/specs/: 2026-07-21-repository-foundation-design.md  2026-07-21-shared-contract-layer-design.md  2026-07-22-dispute-mcp-server-design.md  2026-07-22-vertical-slice-design.md  2026-07-23-agent-registry-design.md
duplicate-transaction-agent/: pyproject.toml
duplicate-transaction-agent/src/duplicate_transaction_agent/: __init__.py
duplicate-transaction-agent/tests/: test_import.py
investigator-ui/: index.html  package-lock.json  package.json  tsconfig.json
investigator-ui/src/: App.tsx  types.ts
investigator-ui/src/components/: DecisionCard.tsx  EventStream.tsx  InvestigationTimeline.tsx  RecommendationCard.tsx
investigator-ui/src/lib/: agent.ts
knowledge-ingestor/: pyproject.toml
knowledge-ingestor/src/knowledge_ingestor/: __init__.py
knowledge-ingestor/tests/: test_import.py
merchant-evidence-agent/: pyproject.toml
merchant-evidence-agent/src/merchant_evidence_agent/: __init__.py
merchant-evidence-agent/tests/: test_import.py
orchestrator-agent/: pyproject.toml
orchestrator-agent/src/orchestrator_agent/: __init__.py
orchestrator-agent/tests/: test_contracts_integration.py  test_import.py
policy-agent/: pyproject.toml
policy-agent/src/policy_agent/: __init__.py
policy-agent/tests/: test_import.py
transaction-agent/: pyproject.toml
transaction-agent/src/transaction_agent/: __init__.py  api.py  config.py  llm_client.py  main.py  mcp_client.py  service.py
transaction-agent/tests/: test_api.py  test_contracts_integration.py  test_import.py  test_llm_client.py  test_llm_client_live_ollama.py  test_mcp_client.py  test_service.py
