[project]
name = "duplicate-transaction-agent"
version = "0.1.0"
description = "Dynamically registered duplicate transaction capability"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duplicate_transaction_agent"]
