[project]
name = "merchant-evidence-agent"
version = "0.1.0"
description = "Merchant evidence investigation"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/merchant_evidence_agent"]
