[project]
name = "orchestrator-agent"
version = "0.1.0"
description = "Coordinates investigations and deterministic aggregation"
requires-python = ">=3.13"
dependencies = ["contracts"]

[tool.uv.sources]
contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator_agent"]
