[project]
name = "transaction-agent"
version = "0.1.0"
description = "Transaction-domain investigation"
requires-python = ">=3.13"
dependencies = ["contracts"]

[tool.uv.sources]
contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transaction_agent"]
